# open-babel-symmetry

./: .gitignore  CMakeLists.txt  README.md
resource/: molecule.sdf
src/: CMakeLists.txt  main.cpp
